--- a/app.yaml
+++ b/app.yaml
@@ -8,6 +8,8 @@ handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
+- url: /bootstrap
+  static_dir: bootstrap
 
 - url: .*
   script: main.app
@@ -15,3 +17,5 @@ handlers:
 libraries:
 - name: webapp2
   version: "2.5.2"
+- name: jinja2
+  version: latest
