more robust way to include jQuery

--- a/app.yaml
+++ b/app.yaml
@@ -10,6 +10,8 @@ handlers:
   upload: favicon\.ico
 - url: /bootstrap
   static_dir: bootstrap
+- url: /js
+  static_dir: js
 
 - url: .*
   script: main.app
