all pages templates

--- a/app.yaml
+++ b/app.yaml
@@ -20,4 +20,6 @@ libraries:
 - name: webapp2
   version: "2.5.2"
 - name: jinja2
-  version: latest
+  version: "2.6"
+- name: lxml
+  version: "2.3"
