--- a/app.yaml
+++ b/app.yaml
@@ -16,8 +16,8 @@ handlers:
   static_dir: css
 - url: /images
   static_dir: images
-- url: /apache
-  static_dir: apache
+- url: /apache/images
+  static_dir: apache/images
 - url: .*
   script: main.app
 
