--- a/cron.yaml
+++ b/cron.yaml
@@ -1,6 +1,6 @@
 cron:
 - description: egoroff.spb.ru Data Backup
-  url: /_ah/datastore_admin/backup.create?name=DataBackupToBlobstore&kind1=Post&kind2=User&kind3=Folder&filesystem=blobstore
+  url: /_ah/datastore_admin/backup.create?name=DataBackupToBlobstore&kind1=Post&kind2=User&kind3=Folder&kind4=File&filesystem=blobstore
   schedule: every sunday 03:00
   timezone: Europe/Moscow
   target: ah-builtin-python-bundle
