--- a/cron.yaml
+++ b/cron.yaml
@@ -1,7 +1,7 @@
 cron:
 - description: egoroff.spb.ru Data Backup
-  url: /_ah/datastore_admin/backup.create?name=DataBackupToBlobstore&kind1=Post&kind2=User&kind3=Folder&kind4=File&filesystem=blobstore
-  schedule: every sunday 03:00
+  url: /_ah/datastore_admin/backup.create?name=DataBackupToBlobstore&kind=Post&kind=User&kind=Folder&kind=File&filesystem=blobstore
+  schedule: every sunday 13:00
   timezone: Europe/Moscow
   target: ah-builtin-python-bundle
 - description: egoroff.spb.ru Config Backup
