--- a/app.yaml
+++ b/app.yaml
@@ -16,7 +16,7 @@ libraries:
   version: "2.3"
 
 handlers:
-- url: /(favicon\.ico|robots\.txt)
+- url: /(favicon\.ico|robots\.txt|googlee53c87e9e3e91020\.html)
   static_files: static/\1
   upload: static/(.*)
 
