--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gae-init",
+  "name": "egoroff",
   "author": "Panayiotis Lipiridis <lipiridis@gmail.com>",
   "licenses": [
     {
@@ -9,7 +9,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "http://github.com/gae-init"
+    "url": "https://github.com/aegoroff/egoroff.spb.ru"
   },
   "dependencies": {
     "coffee-script": "~1",
