--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
     "jquery": "~2",
     "jquery-ui": "~1",
     "momentjs": "~2",
+    "moment-timezone": "~0",
+    "jstz": "https://github.com/bower-packages/bower-jstz.git",
     "nprogress": "https://github.com/lipis/nprogress.git#master",
 	"knockout": "~3",
 	"knockoutmapping": "https://github.com/SteveSanderson/knockout.mapping.git#master"
@@ -30,6 +32,12 @@
     },
     "momentjs": {
       "js": "*.js"
+    },
+    "moment-timezone": {
+      "js": "builds/moment-timezone-with-data.js"
+    },
+    "jstz": {
+      "js": "jstz.js"
     },
     "nprogress": {
       "js": "*.js",
