--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,7 @@
       "less": "themes/base/*.css"
     },
     "momentjs": {
-      "js": "*.js"
+      "js": "min/moment-with-locales.js"
     },
     "moment-timezone": {
       "js": "builds/moment-timezone-with-data.js"
