--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "jstz": "https://github.com/bower-packages/bower-jstz.git",
     "nprogress": "https://github.com/lipis/nprogress.git#master",
 	"knockout": "~3",
-	"knockoutmapping": "https://github.com/SteveSanderson/knockout.mapping.git#master"
+	"knockoutmapping": "https://github.com/SteveSanderson/knockout.mapping.git#master",
+	"redactor": "https://github.com/aegoroff/redactor-js.git#master"
   },
   "exportsOverride": {
     "bootstrap": {
@@ -52,6 +53,10 @@
     },
     "knockoutmapping": {
       "js": "*.js"
+    },
+    "redactor": {
+      "js": "redactor/*.js",
+      "less": "redactor/*.less"
     }
   }
 }
