--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     },
     "bootstrapvalidator": {
       "js": "dist/js/bootstrapValidator.js",
+      "js/language": "dist/js/language/*.js",
       "less": "dist/css/bootstrapValidator.css"
     },
     "jquery": {
