--- a/main/dos.yaml
+++ b/main/dos.yaml
@@ -1,3 +1,5 @@
 blacklist:
 - subnet: 144.76.156.211
   description: IP address of Process terminated because the request deadline was exceeded. (Error code 123)
+- subnet: 37.57.231.226
+  description: It seems spammers
