--- a/main/dos.yaml
+++ b/main/dos.yaml
@@ -3,6 +3,8 @@ blacklist:
   description: IP address of Process terminated because the request deadline was exceeded. (Error code 123)
 - subnet: 37.57.231.226
   description: It seems spammers
+- subnet: 193.150.120.16
+  description: It seems spammers
 - subnet: 193.201.224.0/22
   description: It seems spammers
 - subnet: 195.248.234.0/23
