--- a/main/app.yaml
+++ b/main/app.yaml
@@ -32,11 +32,11 @@ handlers:
   upload: static/img/favicon.ico
 
 - url: /p/min/style/images/
-  static_dir: static/ext/img/jquery-ui-less/
+  static_dir: static/ext/jquery-ui-less/less/images/
   expiration: 1000d
 
 - url: /p/dst/style/images/
-  static_dir: static/ext/img/jquery-ui-less/
+  static_dir: static/ext/jquery-ui-less/less/images/
   expiration: 1000d
 
 - url: /p/(.*\.ttf)
@@ -72,10 +72,11 @@ skip_files:
 - ^(.*/)?index\.yml
 - ^lib/.*
 - ^static/dst/.*
-- ^static/ext/coffee/.*
-- ^static/ext/css/.*
-- ^static/ext/js/.*
-- ^static/ext/less/.*
+- ^static/ext/.*\.coffee
+- ^static/ext/.*\.css
+- ^static/ext/.*\.js
+- ^static/ext/.*\.less
+- ^static/ext/.*\.json
 - ^static/src/.*
 
 
