--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "devDependencies": {
     "bower": "~1",
     "del": "~1",
-    "gulp": "~3",
+    "gulp": "^4.0.2",
     "gulp-bower": "~0",
-    "gulp-livereload": "~3",
-    "gulp-load-plugins": "~0",
+    "gulp-livereload": "^4.0.2",
+    "gulp-load-plugins": "^2.0.6",
     "main-bower-files": "~2",
     "minimist": "~1"
   }
