--- a/app.yaml
+++ b/app.yaml
@@ -4,14 +4,23 @@ inbound_services:
   - warmup
 
 handlers:
+- url: /p/min/style/images/(.*)
+  static_files: static/ext/jquery-ui-less/less/images/\1
+  upload: static/ext/jquery-ui-less/less/images/(.*)
+
+- url: /p/ext/font-awesome/fonts/(.*)
+  static_files: static/ext/font-awesome/fonts/\1
+  upload: static/ext/font-awesome/fonts/(.*)
+
+- url: /p/ext/bootstrap/fonts/(.*)
+  static_files: static/ext/bootstrap/fonts/\1
+  upload: static/ext/bootstrap/fonts/(.*)
+
 - url: /p/
   static_dir: static/
 
 - url: /apache/images
   static_dir: apache/images
-
-- url: /apache/css
-  static_dir: apache/css
 
 - url: /(robots\.txt|googlee53c87e9e3e91020\.html)
   static_files: static/\1
@@ -20,20 +29,6 @@ handlers:
 - url: /favicon.ico
   static_files: static/img/favicon.ico
   upload: static/img/favicon.ico
-
-- url: /p/min/style/images/
-  static_dir: static/ext/jquery-ui-less/less/images/
-  expiration: 1000d
-
-- url: /p/dst/style/images/
-  static_dir: static/ext/jquery-ui-less/less/images/
-  expiration: 1000d
-
-- url: /p/(.*\.ttf)
-  static_files: static/\1
-  upload: static/(.*\.ttf)
-  mime_type: font/ttf
-  expiration: 1000d
 
 - url: /.*
   script: auto
