--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ static/ext
 static/fonts
 static/min
 static/site_credentials.json
+static/site_credentials_gh.json
 templates/apache/
 node_modules
 temp/
