--- a/app.yaml
+++ b/app.yaml
@@ -19,6 +19,12 @@ handlers:
 - url: /p/
   static_dir: static/
 
+- url: /css/
+  static_dir: ui/dist/css/
+
+- url: /js/
+  static_dir: ui/dist/js/
+
 - url: /apache/images
   static_dir: apache/images
 
