--- a/app.yaml
+++ b/app.yaml
@@ -20,10 +20,10 @@ handlers:
   static_dir: static/
 
 - url: /css/
-  static_dir: ui/dist/css/
+  static_dir: static/dist/css/
 
 - url: /js/
-  static_dir: ui/dist/js/
+  static_dir: static/dist/js/
 
 - url: /apache/images
   static_dir: apache/images
