--- a/app.yaml
+++ b/app.yaml
@@ -19,11 +19,8 @@ handlers:
 - url: /p/
   static_dir: static/
 
-- url: /css/
-  static_dir: static/dist/css/
-
-- url: /js/
-  static_dir: static/dist/js/
+- url: /admin/
+  static_dir: static/dist/
 
 - url: /apache/images
   static_dir: apache/images
