--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-nprogress-ts": "^1.0.0",
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
