--- a/ui/package.json
+++ b/ui/package.json
@@ -12,15 +12,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@types/nprogress": "^0.2.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
-    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
+    "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
