--- a/app.yaml
+++ b/app.yaml
@@ -19,8 +19,11 @@ handlers:
 - url: /p/
   static_dir: static/
 
-- url: /admin/
-  static_dir: static/dist/
+- url: /css/
+  static_dir: static/dist/css/
+
+- url: /js/
+  static_dir: static/dist/js/
 
 - url: /apache/images
   static_dir: apache/images
