--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "reflect-metadata": "^0.1.13",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
+    "vue-gtag": "^1.11.0",
     "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^9.1.2",
     "vue-typescript-inject": "^0.3.1"
