--- a/app.yaml
+++ b/app.yaml
@@ -26,6 +26,8 @@ handlers:
 
 - url: /.*
   script: auto
+  secure: always
+  redirect_http_response_code: 301
 
 env_variables:
   GIN_MODE: release
