--- a/ui/package.json
+++ b/ui/package.json
@@ -21,7 +21,7 @@
     "reflect-metadata": "^0.1.13",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
-    "vue-gtag": "^1.11.0",
+    "vue-gtag": "~1",
     "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^9.1.2",
     "vue-typescript-inject": "^0.3.1"
@@ -32,7 +32,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.12",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
