--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "vue-class-component": "^7.2.6",
     "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^9.1.2",
+    "vue-social-sharing": "^3.0.7",
     "vue-typescript-inject": "^0.3.1"
   },
   "devDependencies": {
