--- a/ui/package.json
+++ b/ui/package.json
@@ -17,16 +17,19 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "highlight.js": "^9.18.5",
     "moment": "^2.29.1",
     "reflect-metadata": "^0.1.13",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
+    "vue-highlight.js": "^3.1.0",
     "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^9.1.2",
     "vue-social-sharing": "^3.0.7",
     "vue-typescript-inject": "^0.3.1"
   },
   "devDependencies": {
+    "@types/highlight.js": "^10.1.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
