--- a/ui/package.json
+++ b/ui/package.json
@@ -17,12 +17,12 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "highlight.js": "^9.18.5",
+    "highlight.js": "^10.7.2",
     "moment": "^2.29.1",
     "reflect-metadata": "^0.1.13",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
-    "vue-highlight.js": "^3.1.0",
+    "vue-highlight.js": "^4.0.1-beta",
     "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^9.1.2",
     "vue-social-sharing": "^3.0.7",
