--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
     "vue-highlight.js": "^4.0.1-beta",
     "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.2.0",
     "vue-social-sharing": "^3.0.7",
     "vue-typescript-inject": "^0.3.1"
   },
