--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,6 +21,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
+        id: go
       - name: Use Node.js 14.0
         uses: actions/setup-node@v1
         with:
@@ -33,3 +38,5 @@ jobs:
         working-directory: ./ui
         run: |
           npm run build
+      - name: Test
+        run: go test ./...
