--- a/egoroff/egoroff/Cargo.toml
+++ b/egoroff/egoroff/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.2.12", features = ["std", "color", "suggestions", "cargo", "derive"] }
+kernel = { path = "../kernel" }
+server = { path = "../server" }
+clap = { version = "3.2.14", features = ["std", "color", "suggestions", "cargo", "derive"] }
+serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
