--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
+mime_guess = "2"
+axum = { version = "0.5.13", features = ["multipart"] }
+tokio-util = { version = "0.7.3", features = ["full"] }
+futures = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing = "0.1"
+tower = { version = "0.4", features = ["util", "timeout"] }
+tower-http = { version = "0.3", features = ["add-extension", "trace", "cors"] }
