--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,7 @@ updates:
     directory: "/ui" # Location of package manifests
     schedule:
       interval: "daily"
+  - package-ecosystem: "cargo" # See documentation for possible values
+    directory: "/egoroff" # Location of package manifests
+    schedule:
+      interval: "daily"
