feat: TLS support added

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ egoroffspbrupri.pem
 egoroffspbrupub.pem
 /egoroff/target/
 /egoroff/Cargo.lock
+egoroff/egoroff_spb_ru.crt
+egoroff/egoroff_spb_ru.key.pem
