--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -18,3 +18,4 @@ tracing = "0.1"
 tower = { version = "0.4", features = ["util", "timeout"] }
 tower-http = { version = "0.3", features = ["add-extension", "trace", "cors"] }
 tera = "1.16.0"
+rust-embed = "6"
