--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -17,6 +17,6 @@ futures = "0.3"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing = "0.1"
 tower = { version = "0.4", features = ["util", "timeout"] }
-tower-http = { version = "0.3", features = ["add-extension", "trace", "cors"] }
+tower-http = { version = "0.3", features = ["add-extension", "trace", "cors", "limit"] }
 tera = "1.17.1"
 rust-embed = "6"
