--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -8,6 +8,7 @@ workspace = ".."
 
 [dependencies]
 petgraph = "0.6"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 rstest = "0.16.0"
