--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -7,7 +7,9 @@ workspace = ".."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+kernel = { path = "../kernel" }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 mime_guess = "2"
 axum = { version = "0.6.0", features = ["multipart"] }
