--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -12,7 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 mime_guess = "2"
-axum = { version = "0.6.0", features = ["multipart"] }
+axum = { version = "0.6.1", features = ["multipart"] }
 axum-server = { version = "0.4.4", features = ["tls-rustls"] }
 tokio-util = { version = "0.7.4", features = ["full"] }
 futures = "0.3"
@@ -21,4 +21,4 @@ tracing = "0.1"
 tower = { version = "0.4", features = ["util", "timeout"] }
 tower-http = { version = "0.3", features = ["add-extension", "trace", "cors", "limit"] }
 tera = "1.17.1"
-rust-embed = "6"
+rust-embed = { version = "6", features = ["include-exclude"] }
