--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -9,6 +9,7 @@ workspace = ".."
 [dependencies]
 petgraph = "0.6"
 serde = { version = "1.0", features = ["derive"] }
+chrono = {version="0.4.23", default-features = false, features = ["serde", "clock", "std"]}
 
 [dev-dependencies]
 rstest = "0.16.0"
