--- a/apache/config.json
+++ b/apache/config.json
@@ -1,4 +1,16 @@
-{
-   "mod_rewrite" : ["apache_module", "Модуль Apache mod_rewrite", "Перевод документации Apache по модулю mod_rewrite — реализующему механизм URL преобразований.", "apache,mod_rewrite,документация,мануал,перевод,URL,преобразования"],
-   "rewriteguide" : ["apache_manualpage", "Руководство по URL преобразованиям", "Перевод Apache URL Rewriting Guide в оригинале написанного Ralf S. Engelschall. Этот документ дополняет документацию к mod_rewrite. Он описывает возможности использования mod_rewrite веб-сервера Apache.", "apache,mod_rewrite,руководство,мануал,перевод,URL,преобразования"]
-}
+[
+   {
+      "id": "mod_rewrite",
+      "stylesheet": "apache_module",
+      "title": "Модуль Apache mod_rewrite",
+      "description": "Перевод документации Apache по модулю mod_rewrite — реализующему механизм URL преобразований.",
+      "keywords": "apache,mod_rewrite,документация,мануал,перевод,URL,преобразования"
+   },
+   {
+      "id": "rewriteguide",
+      "stylesheet": "apache_manualpage",
+      "title": "Руководство по URL преобразованиям",
+      "description": "Перевод Apache URL Rewriting Guide в оригинале написанного Ralf S. Engelschall. Этот документ дополняет документацию к mod_rewrite. Он описывает возможности использования mod_rewrite веб-сервера Apache.",
+      "keywords": "apache,mod_rewrite,руководство,мануал,перевод,URL,преобразования"
+   }
+]
