--- a/egoroff/Cargo.toml
+++ b/egoroff/Cargo.toml
@@ -3,6 +3,7 @@ members = [
   "egoroff",
   "kernel",
   "server",
+  "migrate",
 ]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
