--- a/egoroff/egoroff/Cargo.toml
+++ b/egoroff/egoroff/Cargo.toml
@@ -9,6 +9,7 @@ workspace = ".."
 [dependencies]
 kernel = { path = "../kernel" }
 server = { path = "../server" }
+migrate = { path = "../migrate" }
 clap = { version = "4.0.26", features = ["std", "color", "suggestions", "cargo"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
