--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 chrono = {version="0.4.23", default-features = false, features = ["serde", "clock", "std"]}
 lol_html = "0.3.1"
 regex = "1"
+quick-xml = "0.26.0"
 
 [dependencies.rusqlite]
 version = "0.28"
