--- a/egoroff/migrate/Cargo.toml
+++ b/egoroff/migrate/Cargo.toml
@@ -10,3 +10,5 @@ kernel = { path = "../kernel" }
 chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
