--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -13,6 +13,7 @@ chrono = {version="0.4.23", default-features = false, features = ["serde", "cloc
 lol_html = "0.3.1"
 regex = "1"
 quick-xml = "0.26.0"
+pulldown-cmark = "0.9.2"
 
 [dependencies.rusqlite]
 version = "0.28"
