--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -14,6 +14,7 @@ lol_html = "0.3.1"
 regex = "1"
 quick-xml = "0.26.0"
 pulldown-cmark = "0.9.2"
+anyhow = "1.0"
 
 [dependencies.rusqlite]
 version = "0.28"
