--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -15,6 +15,7 @@ regex = "1"
 quick-xml = "0.26.0"
 pulldown-cmark = "0.9.2"
 anyhow = "1.0"
+lazy_static = "1.4.0"
 
 [dependencies.rusqlite]
 version = "0.28"
