--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -10,6 +10,7 @@ workspace = ".."
 kernel = { path = "../kernel" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde-xml-rs = "0.6.0"
 tokio = { version = "1", features = ["full"] }
 mime_guess = "2"
 axum = { version = "0.6.1", features = ["multipart"] }
@@ -24,3 +25,6 @@ tower = { version = "0.4", features = ["util", "timeout"] }
 tower-http = { version = "0.3", features = ["add-extension", "trace", "cors", "limit"] }
 tera = "1.17.1"
 rust-embed = { version = "6", features = ["include-exclude"] }
+
+[dev-dependencies]
+chrono = {version="0.4.23", default-features = false, features = ["serde", "clock", "std"]}
