feat: prometheus disabled by default

--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -15,7 +15,7 @@ mime_guess = "2"
 axum = { version = "0.6.1", features = ["multipart"] }
 axum-server = { version = "0.4.4", features = ["tls-rustls"] }
 axum-extra = "0.4.2"
-axum-prometheus = "0.2.0"
+axum-prometheus = { version = "0.2.0", optional = true }
 tokio-util = { version = "0.7.4", features = ["full"] }
 futures = "0.3"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -27,3 +27,6 @@ rust-embed = { version = "6", features = ["include-exclude"] }
 quick-xml = "0.26.0"
 anyhow = "1.0"
 chrono = {version="0.4.23", default-features = false, features = ["serde", "clock", "std"]}
+
+[features]
+prometheus = ["axum-prometheus"]
