--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -12,7 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 mime_guess = "2"
-axum = { version = "0.6.1", features = ["multipart"] }
+axum = { version = "0.6.1", features = ["multipart", "http2"] }
 axum-server = { version = "0.4.4", features = ["tls-rustls"] }
 axum-extra = "0.4.2"
 axum-prometheus = { version = "0.2.0", optional = true }
