--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -15,6 +15,9 @@ mime_guess = "2"
 axum = { version = "0.6.1", features = ["multipart", "http2"] }
 axum-server = { version = "0.4.4", features = ["tls-rustls"] }
 axum-prometheus = { version = "0.2.0", optional = true }
+axum-sessions = "0.4.1"
+axum-extra = { version = "0.4.2", features = ["cookie"] }
+axum-login = "0.4.1"
 tokio-util = { version = "0.7.4", features = ["full"] }
 futures = "0.3"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -25,6 +28,11 @@ tera = "1.17.1"
 rust-embed = { version = "6", features = ["include-exclude"] }
 anyhow = "1.0"
 chrono = {version="0.4.23", default-features = false, features = ["serde", "clock", "std"]}
+oauth2 = {version= "4.3.0", features = ["reqwest"] }
+
+[dependencies.rand]
+version = "0.8.5"
+features = ["min_const_gen"]
 
 [features]
 prometheus = ["axum-prometheus"]
