--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -16,7 +16,6 @@ axum = { version = "0.6.1", features = ["multipart", "http2"] }
 axum-server = { version = "0.4.4", features = ["tls-rustls"] }
 axum-prometheus = { version = "0.2.0", optional = true }
 axum-sessions = "0.4.1"
-axum-extra = { version = "0.4.2", features = ["cookie"] }
 axum-login = "0.4.1"
 tokio-util = { version = "0.7.4", features = ["full"] }
 futures = "0.3"
@@ -31,6 +30,7 @@ chrono = {version="0.4.23", default-features = false, features = ["serde", "cloc
 oauth2 = {version= "4.3.0", features = ["reqwest"] }
 async-trait = "0.1"
 reqwest = { version = "0.11", features = ["json"] }
+eyre = "0.6.8"
 
 [dependencies.rand]
 version = "0.8.5"
