--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -17,6 +17,7 @@ pulldown-cmark = "0.9.2"
 anyhow = "1.0"
 lazy_static = "1.4.0"
 itertools = "0.10.5"
+async-session = "3.0.0"
 
 [dependencies.rusqlite]
 version = "0.28"
