--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = "1.0"
 lazy_static = "1.4.0"
 itertools = "0.10.5"
 async-session = "3.0.0"
+base64 = "0.20.0"
 
 [dependencies.rusqlite]
 version = "0.28"
