--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -31,6 +31,7 @@ oauth2 = {version= "4.3.0", features = ["reqwest"] }
 async-trait = "0.1"
 reqwest = { version = "0.11", features = ["json"] }
 eyre = "0.6.8"
+lazy_static = "1.4.0"
 
 [dependencies.rand]
 version = "0.8.5"
