--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -12,7 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 chrono = {version="0.4.23", default-features = false, features = ["serde", "clock", "std"]}
 lol_html = "0.3.1"
 regex = "1"
-quick-xml = "0.26.0"
+quick-xml = "0.27.0"
 pulldown-cmark = "0.9.2"
 anyhow = "1.0"
 lazy_static = "1.4.0"
@@ -26,3 +26,4 @@ features = ["bundled", "chrono"]
 
 [dev-dependencies]
 rstest = "0.16.0"
+test-context = "0.1.4"
