--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -19,6 +19,7 @@ lazy_static = "1.4.0"
 itertools = "0.10.5"
 async-session = "3.0.0"
 base64 = "0.20.0"
+url = "2.3.1"
 
 [dependencies.rusqlite]
 version = "0.28"
