--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -20,6 +20,7 @@ itertools = "0.10.5"
 async-session = "3.0.0"
 base64 = "0.20.0"
 url = "2.3.1"
+futures = "0.3"
 
 [dependencies.rusqlite]
 version = "0.28"
