--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -32,6 +32,7 @@ async-trait = "0.1"
 reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
 eyre = "0.6.8"
 lazy_static = "1.4.0"
+jsonwebtoken = "8.2.0"
 
 [dependencies.rand]
 version = "0.8.5"
