--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -9,6 +9,7 @@ workspace = ".."
 [dependencies]
 petgraph = "0.6"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 chrono = {version="0.4.23", default-features = false, features = ["serde", "clock", "std"]}
 lol_html = "0.3.2"
 regex = "1"
@@ -21,6 +22,7 @@ async-session = "3.0.0"
 base64 = "0.21.0"
 url = "2.3.1"
 futures = "0.3"
+utoipa = { version = "2.4.2", features = ["chrono", "time"] }
 
 [dependencies.rusqlite]
 version = "0.28"
