--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -3,6 +3,8 @@ name = "server"
 version = "0.1.0"
 edition = "2021"
 workspace = ".."
+license = "MIT"
+description = "egoroff.spb.ru server"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -35,6 +37,8 @@ lazy_static = "1.4.0"
 jsonwebtoken = "8.2.0"
 url = "2.3.1"
 thiserror = "1.0.38"
+utoipa = { version = "2.4.2", features = ["chrono", "time", "axum_extras"] }
+utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }
 
 [dependencies.rand]
 version = "0.8.5"
