--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -23,7 +23,7 @@ futures = "0.3"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing = "0.1"
 tower = { version = "0.4", features = ["util", "timeout"] }
-tower-http = { version = "0.4", features = ["add-extension", "trace", "cors", "limit", "compression-gzip"] }
+tower-http = { version = "0.4", features = ["add-extension", "trace", "cors", "limit", "compression-gzip", "validate-request", "auth"] }
 tera = "1.17.1"
 rust-embed = { version = "6", features = ["include-exclude"] }
 anyhow = "1.0"
