--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -38,10 +38,7 @@ url = "2.3.1"
 thiserror = "1.0.38"
 utoipa = { version = "3.0.3", features = ["chrono", "time", "axum_extras"] }
 utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
-
-[dependencies.rand]
-version = "0.8.5"
-features = ["min_const_gen"]
+rand = { version = "0.8.5", features = ["min_const_gen"] }
 
 [dev-dependencies]
 rstest = "0.16.0"
