--- a/egoroff/egoroff/Cargo.toml
+++ b/egoroff/egoroff/Cargo.toml
@@ -14,5 +14,8 @@ clap = { version = "4.1.8", features = ["std", "color", "suggestions", "cargo"] 
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+tikv-jemallocator = "0.5"
+
 [features]
 migrating = ["migrate"]
