--- a/egoroff/egoroff/Cargo.toml
+++ b/egoroff/egoroff/Cargo.toml
@@ -13,6 +13,7 @@ migrate = { path = "../migrate", optional = true }
 clap = { version = "4.1.11", features = ["std", "color", "suggestions", "cargo"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
+mimalloc-rust = "0.2"
 
 [features]
 migrating = ["migrate"]
