--- a/egoroff/egoroff/Cargo.toml
+++ b/egoroff/egoroff/Cargo.toml
@@ -13,7 +13,13 @@ migrate = { path = "../migrate", optional = true }
 clap = { version = "4.1.11", features = ["std", "color", "suggestions", "cargo"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
-mimalloc-rust = "0.2"
+
+mimalloc-rust = { version = "0.2", optional = true }
+
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+tikv-jemallocator = { version = "0.5.0", optional = true }
 
 [features]
 migrating = ["migrate"]
+mimalloc = ["mimalloc-rust"]
+jemalloc = ["tikv-jemallocator"]
