--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -20,6 +20,7 @@ axum-sessions = "0.5.0"
 axum-login = "0.5.0"
 tokio-util = { version = "0.7.8", features = ["full"] }
 futures = "0.3"
+futures-util = "0.3"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing = "0.1"
 tower = { version = "0.4", features = ["util", "timeout"] }
