--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -40,6 +40,11 @@ thiserror = "1.0.44"
 utoipa = { version = "3.4.3", features = ["chrono", "time", "axum_extras"] }
 utoipa-swagger-ui = { version = "3.1.4", features = ["axum"] }
 rand = { version = "0.8.5", features = ["min_const_gen"] }
+uuid = { version = "1.4.1", features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]}
 
 [dev-dependencies]
 rstest = "0.18.1"
