feat: download files draft

--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -45,6 +45,7 @@ uuid = { version = "1.4.1", features = [
     "fast-rng",          # Use a faster (but still sufficiently random) RNG
     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ]}
+human_bytes = "0.4.2"
 
 [dev-dependencies]
 rstest = "0.18.1"
