--- a/egoroff/migrate/Cargo.toml
+++ b/egoroff/migrate/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 kernel = { path = "../kernel" }
-chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
-reqwest = { version = "0.11", features = ["json"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-tokio = { version = "1", features = ["full"] }
+chrono = { workspace = true, default-features = false, features = ["clock", "std"] }
+reqwest = { workspace = true, features = ["json"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+tokio = { workspace = true, features = ["full"] }
