feat: building image using alpine and using musl target to work using static-debian11 base image

--- a/egoroff/migrate/Cargo.toml
+++ b/egoroff/migrate/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 kernel = { path = "../kernel" }
 chrono = { workspace = true, default-features = false, features = ["clock", "std"] }
-reqwest = { workspace = true, features = ["json"] }
+reqwest = { workspace = true, features = ["json", "rustls-tls"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
