--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -31,7 +31,7 @@ anyhow = { workspace = true }
 chrono = { workspace = true, default-features = false, features = ["serde", "clock", "std"]}
 oauth2 = {version= "4.4.1", features = ["reqwest"] }
 async-trait = "0.1"
-reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
+reqwest = { workspace = true, features = ["json", "multipart", "stream", "rustls-tls" ] }
 lazy_static = "1.4.0"
 jsonwebtoken = "8.3.0"
 url = { workspace = true }
