--- a/egoroff/kernel/Cargo.toml
+++ b/egoroff/kernel/Cargo.toml
@@ -30,3 +30,6 @@ rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
 
 [dev-dependencies]
 rstest = "0.18.2"
+
+[lints]
+workspace = true
