--- a/egoroff/migrate/Cargo.toml
+++ b/egoroff/migrate/Cargo.toml
@@ -12,3 +12,6 @@ reqwest = { workspace = true, features = ["json", "rustls-tls"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
+
+[lints]
+workspace = true
