feat: migration drafto to axum 0.7.x

--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -14,19 +14,20 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 mime_guess = "2"
-axum = { version = "0.6.20", features = ["multipart", "http2", "headers"] }
-axum-server = { version = "0.5.1", features = ["tls-rustls"] }
+axum = { version = "0.7.1", features = ["multipart", "http2"] }
+axum-extra = { version = "0.9.0", features = ["typed-header"] }
+# TODO: axum-server = { version = "0.5.1", features = ["tls-rustls"] }
 tower-sessions = { workspace = true }
-axum-login = "0.9.0"
+axum-login = "0.10.0"
 tokio-util = { workspace = true, features = ["full"] }
 futures = { workspace = true }
 futures-util = "0.3"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing = "0.1"
 tower = { version = "0.4", features = ["util", "timeout"] }
-tower-http = { version = "0.4", features = ["add-extension", "trace", "cors", "limit", "compression-gzip", "validate-request", "auth"] }
+tower-http = { version = "0.5", features = ["add-extension", "trace", "cors", "limit", "compression-gzip", "validate-request", "auth"] }
 askama = { version = "0.12.1", default-features = false, features = ["with-axum", "mime", "mime_guess", "config", "humansize", "num-traits", "urlencode"] }
-askama_axum = "0.3.0"
+askama_axum = "0.4.0"
 rust-embed = { version = "8", features = ["include-exclude"] }
 anyhow = { workspace = true }
 chrono = { workspace = true, default-features = false, features = ["serde", "clock", "std"]}
