--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -16,7 +16,7 @@ tokio = { workspace = true, features = ["full"] }
 mime_guess = "2"
 axum = { version = "0.7.1", features = ["multipart", "http2"] }
 axum-extra = { version = "0.9.0", features = ["typed-header"] }
-# TODO: axum-server = { version = "0.5.1", features = ["tls-rustls"] }
+axum-server = { version = "0.5.1", features = ["tls-rustls"] }
 tower-sessions = { workspace = true }
 axum-login = "0.10.0"
 tokio-util = { workspace = true, features = ["full"] }
