--- a/egoroff/Cargo.toml
+++ b/egoroff/Cargo.toml
@@ -26,6 +26,7 @@ serde_json = "1.0"
 utoipa = { version = "4.2.3", default-features = false }
 chrono = { version="0.4.38", default-features = false }
 reqwest = { version = "0.12", default-features = false }
+hyper-util = { version = "0.1.3", default-features = false }
 tower-sessions = "0.12.2"
 async-trait = "0.1"
 anyhow = "1.0"
