--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -39,7 +39,7 @@ jsonwebtoken = "9.3.0"
 url = { workspace = true }
 thiserror = "1.0.60"
 utoipa = { workspace = true, features = ["chrono", "time", "axum_extras"] }
-utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
+utoipa-swagger-ui = { version = "7.0.1", features = ["axum"] }
 rand = { version = "0.8.5", features = ["min_const_gen"] }
 uuid = { version = "1.8.0", features = [
     "v4",                # Lets you generate random UUIDs
@@ -47,10 +47,13 @@ uuid = { version = "1.8.0", features = [
     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ]}
 hyper = { version = "1.3.1", features = [] }
-hyper-util = { version = "0.1.3", features = ["tokio", "server-auto", "http1"] }
+hyper-util = { workspace = true, features = ["tokio", "server-auto", "http1"] }
 
 [dev-dependencies]
 rstest = "0.19.0"
 
 [lints]
 workspace = true
+
+[build-dependencies]
+hyper-util = { workspace = true, features = ["http2"] }
