--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -39,7 +39,7 @@ jsonwebtoken = "9.3.0"
 url = { workspace = true }
 thiserror = "1.0.61"
 utoipa = { workspace = true, features = ["chrono", "time", "axum_extras"] }
-utoipa-swagger-ui = { version = "7.0.1", features = ["axum"] }
+utoipa-swagger-ui = { version = "=7.0.1", features = ["axum"] }
 rand = { version = "0.8.5", features = ["min_const_gen"] }
 uuid = { version = "1.8.0", features = [
     "v4",                # Lets you generate random UUIDs
