--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -40,7 +40,7 @@ jobs:
         if: matrix.build == 'linux'
         run: |
           sudo apt-get update -y
-          sudo apt-get install lld -y
+          sudo apt-get install lld python3-lxml -y
       - name: Run build script
         if: matrix.build == 'linux'
         run: ./build.py
